--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<p class="ngay"><strong><i>01 THÀNG 7 2021</i></strong><br><br>
 			Việc giáo dục hướng nghiệp hiện nay không chỉ là vấn đề của riêng ngành giáo dục mà là vấn đề chung của toàn xã hội, bởi học sinh THPT chính là nguồn nhân lực tương lai của đất nước</p>
 			<a href="#">Chi tiết</a>
-			<h4><a class="assss" href="#">Giao dục phải phát huy tối đa năng lực, phẩm chất của người học</a></h4>
+			<h4><a class="daude" href="#">Giao dục phải phát huy tối đa năng lực, phẩm chất của người học</a></h4>
 			<p class="ngay"><strong><I>01 THÀNG 7 2021</I></strong><br><br>
 			Ngày 1.6, Tại Đà Nẵng, Hội đồng quốc gia Phát triển bền vững và nâng cao năng lực cạnh tranh( Ủy ban về Giáo dục và phát triển nhân lực) tổ chức hội thảo Đổi mới GD-ĐT vì mục tiêu phát triển bền vững</p>
 			<a href="#">Chi tiết</a>
@@ -81,7 +81,7 @@
 			</ul>
 			<div>
 				<form>
-					<input type="search" id="search" name="search">
+					<input type="search" id="search" name="search" placeholder="Nhập từ khóa...">
 	  				<button><img src="search.png"></button>
 				</form>
 			</div>
