--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<p class="ngay"><strong><i>01 THÀNG 7 2021</i></strong><br><br>
 			Việc giáo dục hướng nghiệp hiện nay không chỉ là vấn đề của riêng ngành giáo dục mà là vấn đề chung của toàn xã hội, bởi học sinh THPT chính là nguồn nhân lực tương lai của đất nước</p>
 			<a href="#">Chi tiết</a>
-			<h4><a class="daude" href="#">Giao dục phải phát huy tối đa năng lực, phẩm chất của người học</a></h4>
+			<h4><a class="daude" href="#">Giáo dục phải phát huy tối đa năng lực, phẩm chất của người học</a></h4>
 			<p class="ngay"><strong><I>01 THÀNG 7 2021</I></strong><br><br>
 			Ngày 1.6, Tại Đà Nẵng, Hội đồng quốc gia Phát triển bền vững và nâng cao năng lực cạnh tranh( Ủy ban về Giáo dục và phát triển nhân lực) tổ chức hội thảo Đổi mới GD-ĐT vì mục tiêu phát triển bền vững</p>
 			<a href="#">Chi tiết</a>
@@ -89,7 +89,7 @@
 			<a class="btt" href="#logo"><img src="btt.png"></a>
 	</main>
 	<footer>
-			Coppyright &copy 2019 website University of Technology and Education - The University Da Nang. All Rights Reserved.<br>
+			Copyright &copy 2019 website University of Technology and Education - The University Da Nang. All Rights Reserved.<br>
 			Địa chỉ:<address style="display: inline;">số 48 Cao Thắng, TP. Đà Nẵng</address> - Điện thoại: (0236) 3822571 - Email: <a href="mailto: dhspktdn@ute.udn.vn">dhspktdn@ute.udn.vn</a>
 	</footer>
 </body>
